--- a/src/style.css
+++ b/src/style.css
@@ -44,7 +44,9 @@
   background-image: url(./assets/chart_bg.jpg);
   background-repeat:no-repeat;
   background-size: 100% 100%;
-  height: 100%;
+  height: calc(100% - 50px);
+  box-sizing: border-box;
+  padding-top:40px;
 }
 /* 检索页面的按钮 */
 .search-btn{
